maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:2: error: not found: value random3
    var a = random3()
            ^